[package]
name = "ifcontrol"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@pomykalov.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/glebpom/rust-netif"
homepage = "https://github.com/glebpom/rust-netif/ifcontrol"
documentation = "https://docs.rs/ifcontrol"
description = """
A Rust library to control network interfaces
"""

[badges]
travis-ci = { repository = "glebpom/rust-netif" }

[dependencies]
libc = "^0.2"
cfg-if = "0.1.4"
nix = "0.11"
failure = "0.1.2"
eui48 = "0.3.2"
ipnetwork = { git = "https://github.com/glebpom/ipnetwork.git", rev = "master" }


[target.'cfg(unix)'.dependencies]
ifstructs = {path = "../ifstructs"}