[package]
name = "netif-tuntap"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@pomykalov.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/glebpom/rust-netif"
homepage = "https://github.com/glebpom/rust-netif/tuntap"
documentation = "https://docs.rs/netif-tuntap"
description = """
A Rust library to manipulate TUN/TAP interfaces on *nix and Windows systems
"""

[dependencies]
mio = "0.6.15"
tokio = "0.1.7"
futures = "0.1.23"
bytes = "0.4"
tokio-io = "0.1.7"
failure = "0.1.2"
ifcontrol = {path = "../ifcontrol"}
bitflags = "1.0.3"
parking_lot = "0.7.1"

[target.'cfg(target_family="unix")'.dependencies]
libc = "^0.2"
nix = "0.12.0"
ifstructs = {path = "../ifstructs"}

[target.'cfg(target_family="windows")'.dependencies]
winreg = "0.6.0"
winapi = { version = "0.3.6", features = ["winbase", "ioapiset", "winioctl", "processthreadsapi", "winerror", "minwinbase"] }
ipconfig = { path = "../ipconfig" }
miow = "0.3"
