[package]
name = "netif-tuntap"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@pomykalov.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/glebpom/rust-netif"
homepage = "https://github.com/glebpom/rust-netif/tuntap"
documentation = "https://docs.rs/netif-tuntap"
description = """
A Rust library to manipulate TUN/TAP interfaces on *nix and Windows systems
"""
edition = "2018"

[dependencies]
mio = "0.6.19"
tokio = { version = "0.2", features = ["io-driver"] }
futures = { version = "0.3", features = [] }
bytes = "0.5"
thiserror = "1.0"
ifcontrol = {path = "../ifcontrol"}
bitflags = "1.0.3"
parking_lot = "0.10.0"
stop-handle = "0.1"
pin-project-lite = "0.1.4"

[target.'cfg(target_family="unix")'.dependencies]
libc = "^0.2"
nix = "0.16.0"
ifstructs = {path = "../ifstructs"}

[target.'cfg(target_family="windows")'.dependencies]
winreg = "0.6.0"
winapi = { version = "0.3.6", features = ["winbase", "ioapiset", "winioctl", "processthreadsapi", "winerror", "minwinbase"] }
ipconfig = "0.2.1"
miow = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }

